--- a/_includes/RHC.html
+++ b/_includes/RHC.html
@@ -14283,7 +14283,7 @@ Length: 2184, dtype: object</pre>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>An odds ratio of 1.0 means there is no effect. Since the 95% confidence interval subsumes the value 1.0, the odds of surviving is not significantly altered by recieving RHC. So, as other analyses of this dataset have shown, the data suggests that patients recieving RHC do not have higher rates of surivival, and that in fact it is more likely that the opposite, since the predicted mean of the log-odds ratio is 0.94. However, it is entirely possible that the dataset fails to capture information upon which doctors base their decision of whether to treat a patient with RHC or not. This could mean that the patients who recieve RHC are already predisposed to die, and that RHC is not responsible for the increased mortality associated with its use.</p>
+<p>An odds ratio of 1.0 means there is no effect. Since the 95% confidence interval subsumes the value 1.0, the odds of surviving is not significantly altered by recieving RHC. So, as other analyses of this dataset have shown, the data suggests that patients recieving RHC do not have higher rates of surivival, and that in fact it is more likely that the opposite is true, since the predicted mean of the log-odds ratio is 0.94. However, it is entirely possible that the dataset fails to capture information upon which doctors base their decision of whether to treat a patient with RHC or not. This could mean that the patients who recieve RHC are already predisposed to die, and that RHC is not responsible for the increased mortality associated with its use.</p>
 
 </div>
 </div>
